@@ -5,6 +5,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.Processor;
 import javax.annotation.processing.RoundEnvironment;
@@ -69,7 +70,7 @@ public class PersistableProcessor extends AbstractProcessor {
   private static String findNameInPackage(Element e) {
     var sb = new StringBuilder();
     while (e != null && !(e instanceof PackageElement)) {
-      if (!sb.isEmpty()) {
+      if (sb.length() > 0) {
         sb.insert(0, ".");
       }
       sb.insert(0, e.getSimpleName());
@@ -100,7 +101,7 @@ public class PersistableProcessor extends AbstractProcessor {
 
             var diff = eb.getParameters().size() - ea.getParameters().size();
             if (diff == 0) {
-              diff = countSeq(eb.getParameters()) - countSeq(ea.getParameters());
+              diff = countInlineRef(eb.getParameters()) - countInlineRef(ea.getParameters());
             }
             return diff;
           }
@@ -112,7 +113,7 @@ public class PersistableProcessor extends AbstractProcessor {
                     e.getModifiers().contains(Modifier.PUBLIC)
                         && e.getKind() == ElementKind.CONSTRUCTOR)
             .sorted(richerConstructor)
-            .toList();
+            .collect(Collectors.toList());
 
     ExecutableElement cons;
     Element singleton;
@@ -125,7 +126,7 @@ public class PersistableProcessor extends AbstractProcessor {
                           && e.getModifiers().contains(Modifier.STATIC)
                           && e.getModifiers().contains(Modifier.PUBLIC))
               .filter(e -> tu.isSameType(e.asType(), typeElem.asType()))
-              .toList();
+              .collect(Collectors.toList());
       if (singletonFields.isEmpty()) {
         processingEnv
             .getMessager()
@@ -274,12 +275,12 @@ public class PersistableProcessor extends AbstractProcessor {
     return true;
   }
 
-  private int countSeq(List<? extends VariableElement> parameters) {
+  private int countInlineRef(List<? extends VariableElement> parameters) {
     var tu = processingEnv.getTypeUtils();
     var cnt = 0;
     for (var p : parameters) {
       var type = tu.asElement(tu.erasure(p.asType()));
-      if (type != null && type.getSimpleName().toString().equals("Seq")) {
+      if (type != null && type.getSimpleName().toString().equals("Reference")) {
         cnt++;
       }
     }
